--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,82 +8,61 @@
 
 
     <EditText
-        android:hint="First Band"
+        android:hint="e.g. Pink Floyd"
         android:id="@+id/firstBand"
         android:layout_width="150dp"
         android:layout_height="50dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="30dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/secondBand"
-        app:layout_constraintVertical_bias="0.712"
+        app:layout_constraintVertical_bias="0.362"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintVertical_chainStyle="spread" />
+
+    <EditText
+        android:id="@+id/secondBand"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="330dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:hint="e.g. Queen"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/firstBand" />
 
     <EditText
         android:layout_width="150dp"
-        android:hint="Second Band"
+        android:hint="e.g. Led Zeppelin"
         android:layout_height="50dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:id="@+id/secondBand"
+        android:id="@+id/thirdBand"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="332dp" />
+        android:layout_marginBottom="271dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/secondBand"
+        app:layout_constraintVertical_bias="1.0" />
+
+
 
     <Button
-        android:text="Find a Similar Band"
+        android:text="Find Similar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="109dp"
         app:layout_constraintTop_toBottomOf="@+id/secondBand"
         android:id="@+id/findBand" />
-
-    <TextView
-        android:id="@+id/resultBand"
-        android:textSize="20sp"
-        android:hint="Result Band"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/findBand"
-        android:layout_marginRight="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintHorizontal_bias="0.513"
-        app:layout_constraintVertical_bias="0.212" />
-
-    <Button
-        android:text="Listen on Youtube"
-        android:id="@+id/youtubeBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/resultBand"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.312"
-        app:layout_constraintHorizontal_bias="0.111" />
-
-    <Button
-        android:text="Wikipedia Article"
-        android:id="@+id/wikipediaBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@+id/youtubeBtn"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="43dp"
-        app:layout_constraintTop_toBottomOf="@+id/resultBand" />
-
 
 
 </android.support.constraint.ConstraintLayout>
