--- a/app/src/main/res/layout/activity_similar_artists.xml
+++ b/app/src/main/res/layout/activity_similar_artists.xml
@@ -11,35 +11,46 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
 
-        <TextView
-            android:text="Name"
-            android:textSize="20sp"
-            android:id="@+id/name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
+        <ImageView
+            android:src="@mipmap/photo_placeholder"
+            android:id="@+id/artistPhoto"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginBottom="25dp"
             android:layout_marginTop="30dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintHorizontal_bias="0.501"
             android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"/>
+
+        <TextView
+            android:text="@string/name"
+            android:textSize="20sp"
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_below="@+id/artistPhoto"
             android:layout_centerHorizontal="true" />
 
         <TextView
-            android:text="Description"
+            android:text="@string/description"
             android:textSize="16sp"
             android:id="@+id/description"
             android:layout_width="361dp"
             android:layout_height="wrap_content"
             android:textAlignment="textStart"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="14dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintHorizontal_bias="0.521"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp" />
+            android:layout_marginRight="20dp"
+            android:layout_below="@+id/name"
+            android:layout_centerHorizontal="true" />
 
         <ImageView
             android:id="@+id/youtubeIcon"
@@ -59,8 +70,9 @@
             android:layout_toEndOf="@+id/youtubeIcon"
             android:layout_marginStart="21dp" />
 
-        <Button
-            android:text="Find Another"
+        <ImageButton
+            android:src="@android:drawable/ic_media_next"
+            android:backgroundTint="@android:color/black"
             android:id="@+id/findAnother"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -68,7 +80,6 @@
             android:layout_below="@+id/wikipediaIcon"
             android:layout_marginBottom="25dp"
             android:layout_centerHorizontal="true" />
-
     </RelativeLayout>
 
 </ScrollView>
